--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </nav>
     </div>
     <div class="body">
-        <h1>Hello, my name is Phong. I'm from class 11A3CLC</h1>
+        <h1>Hello, my name is Nghiêm Thái Bình. I'm from class 11A3CLC</h1>
         <br><br><br>
         
     </div>
